# mailux-imap

./: Cargo.toml  README.md
bindings/: Cargo.toml
bindings/examples/: blocking.rs  tokio.rs
bindings/src/: lib.rs
bindings/src/async_impl/: builder.rs  connector.rs  mod.rs
bindings/src/blocking/: builder.rs  mod.rs
cli/: Cargo.toml
cli/src/: main.rs
imap/: Cargo.toml
imap/src/: commands.rs  error.rs  format.rs  lib.rs  messages.rs  parser.rs  tls.rs
imap/src/async_impl/: builder.rs
imap/src/blocking/: builder.rs  mod.rs
imap/src/parser/: auth.rs  fetch.rs  greeting.rs  mailbox.rs  mod.rs
imap/src/types/: command.rs  common.rs  mod.rs  response.rs
