[package]
name = "imap"
version = "0.1.0"
edition = "2024"

[features]
default = [ "tokio-runtime" ]
tokio-runtime = [ "dep:tokio", "dep:tokio-rustls" ]
blocking = []

[dependencies]
rustls = "0.23.29"
thiserror = "2.0.12"
tracing = "0.1.41"
webpki-roots = "1.0.1"

tokio = { version = "1.46.1", features = [ "net", "rt", "io-util" ], optional = true }
tokio-rustls = { version = "0.26.2", optional = true }
